@@ -7,8 +7,7 @@ Package {
      hs_libraries    = ["HSsourceview"],
      extra_libraries = [@SOURCEVIEW_LIBS_CQ@],
      include_dirs    = [@SOURCEVIEW_CFLAGS_CQ@],
-     c_includes      = ["gtksourceview/gtksourcemarker.h",
-                        "gtksourceview/gtksourcelanguagesmanager.h",
+     c_includes      = ["gtksourceview/gtksourcelanguagesmanager.h",
                         "gtksourceview/gtksourcetag.h",
                         "gtksourceview/gtksourceiter.h",
                         "gtksourceview/gtksourceview.h"],
